Fixing bug 79133 (by working around the real problem). Image onerror events cause window.onerror handlers to be called since the events bubble up the tree. r=brendan@mozilla.org, sr=vidur@netscape.com